# JarvisV3.1

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  download_simple.py  download_wikipedia.py  jarvis_cli.py  launch.bat  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
PR_RELEASE/: PR_strategy.md  ROADMAP_PR.md  checklist_phase1.md  checklist_phase2.md  files_phase1.md  files_phase2.md
client/: index.html  main.js  package-lock.json  package.json  preload.js
client/css/: animations.css  base.css  components.css  layout.css  variables.css
client/flutter/: README.md  pubspec.yaml
client/js/: api.js  app.js  chat.js
core/: cache.py  config.yaml  db.py  event_bus.py  language.py  plugin_manager.py  plugin_sandbox.py  server.py
data/knowledge/: README.md  jarvis_v3.1.md  nasti_core.md
plugins/agents/: __init__.py  handler.py  orchestrator.py  registry.py
plugins/android/: handler.py
plugins/benchmark/: handler.py
scripts/: ingest_python_docs.py  ingest_rust_docs.py  ingest_stackoverflow.py
tests/: batch_ingest.py  conftest.py  test_agents.py  test_brain.py  test_brain_rag.py  test_chunker.py  test_e2e_rag.py  test_graph.py  test_learning.py  test_nomad.py  test_nomad_e2e.py  test_nomad_wikipedia.py  test_npu.py  test_pipeline.py  test_rag.py  test_unit.py  test_wikipedia.py  test_zim_loader.py  test_zim_pipeline.py
web/: index.html
(+153 files in other folders)
