[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-v3.1"
version = "3.1.0"
description = "J.A.R.V.I.S V3.1 — AI OS: мыслящий помощник"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.140",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0"
]

[project.optional-dependencies]
rag = ["chromadb>=1.0"]
voice = ["edge-tts>=6.1", "openai-whisper>=20231117"]
graph = ["networkx>=3.0"]
npu = ["openvino>=2024.0"]
file_formats = ["pdfplumber>=0.10", "python-docx>=1.0", "pandas>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
wikipedia = ["libzim>=1.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["core", "plugins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
